docs/0.17/_sources/api/gammapy.modeling.models.CompoundSpectralModel.rst.txt
CompoundSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: CompoundSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~CompoundSpectralModel.covariance
      ~CompoundSpectralModel.default_parameters
      ~CompoundSpectralModel.parameters
      ~CompoundSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~CompoundSpectralModel.__call__
      ~CompoundSpectralModel.copy
      ~CompoundSpectralModel.create
      ~CompoundSpectralModel.energy_flux
      ~CompoundSpectralModel.evaluate_error
      ~CompoundSpectralModel.from_dict
      ~CompoundSpectralModel.from_parameters
      ~CompoundSpectralModel.integral
      ~CompoundSpectralModel.inverse
      ~CompoundSpectralModel.plot
      ~CompoundSpectralModel.plot_error
      ~CompoundSpectralModel.spectral_index
      ~CompoundSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
