docs/1.0rc1/_sources/api/gammapy.modeling.models.CompoundSpectralModel.rst.txt
CompoundSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: CompoundSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~CompoundSpectralModel.covariance
      ~CompoundSpectralModel.default_parameters
      ~CompoundSpectralModel.frozen
      ~CompoundSpectralModel.is_norm_spectral_model
      ~CompoundSpectralModel.parameters
      ~CompoundSpectralModel.tag
      ~CompoundSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~CompoundSpectralModel.__call__
      ~CompoundSpectralModel.copy
      ~CompoundSpectralModel.energy_flux
      ~CompoundSpectralModel.energy_flux_error
      ~CompoundSpectralModel.evaluate_error
      ~CompoundSpectralModel.freeze
      ~CompoundSpectralModel.from_dict
      ~CompoundSpectralModel.from_parameters
      ~CompoundSpectralModel.integral
      ~CompoundSpectralModel.integral_error
      ~CompoundSpectralModel.inverse
      ~CompoundSpectralModel.inverse_all
      ~CompoundSpectralModel.plot
      ~CompoundSpectralModel.plot_error
      ~CompoundSpectralModel.reassign
      ~CompoundSpectralModel.reference_fluxes
      ~CompoundSpectralModel.spectral_index
      ~CompoundSpectralModel.to_dict
      ~CompoundSpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate_error
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: unfreeze
